--- a/Student/04/Gallery/photos/templates/theme.html
+++ b/Student/04/Gallery/photos/templates/theme.html
@@ -20,7 +20,7 @@
         <h2>No Block Defined</h2>
         {% endblock content %}
 
-        <div class="bg-dark text-light justify-content-center">
+        <div class="bg-dark text-light center-div">
             <a href="/" class="btn bg-success text-light m-5">EMBRACE THE SQUAD</a>
         </div>
 
