--- a/Student/04/Gallery/static/gallery.css
+++ b/Student/04/Gallery/static/gallery.css
@@ -10,3 +10,9 @@ h1 {
     margin: 2em;
     border-radius: 10px;
 }
+
+.center-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }  
