--- a/Student/04/Gallery/photos/templates/theme.html
+++ b/Student/04/Gallery/photos/templates/theme.html
@@ -20,8 +20,8 @@
         <h2>No Block Defined</h2>
         {% endblock content %}
 
-        <div class="bg-dark text-light center-div">
-            <a href="/" class="btn bg-success text-light m-5">EMBRACE THE SQUAD</a>
+        <div class="bg-dark text-light">
+            <a href="/" class="btn bg-success text-light m-5 centered-button">EMBRACE THE SQUAD</a>
         </div>
 
     </div>
