--- a/Student/04/Gallery/static/gallery.css
+++ b/Student/04/Gallery/static/gallery.css
@@ -15,4 +15,16 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-  }  
+}
+.centered-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    background-color: #007bff; /* Add your desired background color */
+    color: #ffffff; /* Add your desired text color */
+    padding: 10px 20px; /* Add padding as needed */
+    border-radius: 5px; /* Add border radius for rounded corners */
+}
+  
