--- a/Student/04/Gallery/heroes/templates/heroes.html
+++ b/Student/04/Gallery/heroes/templates/heroes.html
@@ -6,8 +6,8 @@
 
 {% for photo in photos %}
 
-<a href="/photo/{{ photo.id }}">
-    <img class="photo" src="/{{ photo.file }}" alt="Chapter {{ photo.id }}" width="200">
+<a href="/hero/{{ id }}">
+    <img class="photo" src="/{{ Image }}" alt="Hero {{ id }}" width="200">
 </a>
 
 {% endfor %}
