--- a/Student/04/Gallery/heroes/templates/heroes.html
+++ b/Student/04/Gallery/heroes/templates/heroes.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% for photo in photos %}
+{% for hero in heroes %}
 
 <a href="/hero/{{ id }}">
     <img class="photo" src="/{{ Image }}" alt="Hero {{ id }}" width="200">
