--- a/Student/04/Gallery/heroes/templates/heroes.html
+++ b/Student/04/Gallery/heroes/templates/heroes.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-{% for hero in heroes %}
+{% for photo in photos %}
 
-<a href="/hero/{{ id }}">
-    <img class="photo" src="/{{ Image }}" alt="Hero {{ id }}" width="200">
+<a href="/hero/{{ photo.id }}">
+    <img class="photo" src="/{{ photo.file }}" alt="Hero {{ photo.id }}" width="200">
 </a>
 
 {% endfor %}
