--- a/Student/04/Gallery/heroes/templates/hero.html
+++ b/Student/04/Gallery/heroes/templates/hero.html
@@ -4,14 +4,14 @@
 <h3 style="text-align: center;"><i>Meet This Guy!</i></h3>
 
 <p>
-    <img class="photo" src="/{{ Image }}">
+    <img class="photo" src="{{ Image }}">
 </p>
 <p>
-    The stats!:
+    The stats!: <br>
     
-    Name: {{ Name }}
-    Strengths: {{ Strengths }}
-    Weaknesses: {{ Weaknesses }}
+    Name: {{ Name }}<br>
+    Strengths: {{ Strengths }}<br>
+    Weaknesses: {{ Weaknesses }}<br>
 
 </p>
 <p>
