--- a/Student/04/Gallery/static/gallery.css
+++ b/Student/04/Gallery/static/gallery.css
@@ -1,5 +1,6 @@
 h1 {
-    color: green;
+    color: red;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .header {
