--- a/Student/04/Gallery/heroes/templates/theme.html
+++ b/Student/04/Gallery/heroes/templates/theme.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/gallery.css">
 </head>
 
-<body class=" bg-dark text-light">
+<body>
     <div class="container">
 
         <h1 class="header" style="text-align: center;">The Iconic Squad</h1>
