--- a/Student/04/Gallery/heroes/templates/theme.html
+++ b/Student/04/Gallery/heroes/templates/theme.html
@@ -20,7 +20,7 @@
         <h2>No Block Defined</h2>
         {% endblock content %}
 
-        <div class="bg-dark text-light">
+        <div class="text-light">
             <a href="/" class="btn bg-success text-light m-5 centered-button">EMBRACE THE SQUAD</a>
         </div>
 
