--- a/Student/06/SuperHeroes/SuperHeroes/templates/theme.html
+++ b/Student/06/SuperHeroes/SuperHeroes/templates/theme.html
@@ -14,14 +14,14 @@
 <body>
     <div class="container">
 
-        <h1 class="header" style="text-align: center;">The Iconic Squad</h1>
+        <h1 class="header" style="text-align: center;">Hero Tracker</h1>
 
         {% block content %}
         <h2>No Block Defined</h2>
         {% endblock content %}
 
         <div class="text-light">
-            <a href="/" class="btn bg-success text-light m-5 centered-button">EMBRACE THE SQUAD</a>
+            <a href="/" class="btn bg-success text-light m-5 centered-button">Return</a>
         </div>
 
     </div>
