--- a/Student/10/SuperHeroes/photos/templates/photo/_photo.html
+++ b/Student/10/SuperHeroes/photos/templates/photo/_photo.html
@@ -1,7 +1,7 @@
 <div class="card col-lg">
 
     <div class="card-header message">
-        Photo
+        Sighting
     </div>
     <div class="card-body">
 
