--- a/Student/10/SuperHeroes/photos/templates/photo/_photos.html
+++ b/Student/10/SuperHeroes/photos/templates/photo/_photos.html
@@ -1,12 +1,12 @@
 <div class="card col-lg">
 
     <div class="card-header message">
-        Photos
+        Sightings
     </div>
     <div class="card-body">
         <table class="table table-hover">
             <tr>
-                <th>Photo</th>
+                <th>Sighting</th>
                 <th>URL</th>
                 <th>Image</th>
             </tr>
@@ -22,7 +22,7 @@
         </table>
 
         <p>
-            <a href="/photo/add" class="btn btn-success m-5">Add New Photo</a>
+            <a href="/photo/add" class="btn btn-success m-5">Add New Sighting</a>
         </p>
     </div>
 
