--- a/Student/10/SuperHeroes/photos/templates/photo/add.html
+++ b/Student/10/SuperHeroes/photos/templates/photo/add.html
@@ -9,7 +9,7 @@ Add New Photo
 
 <div class="container m-5">
 
-    <h1 class="text-primary">Add New Message</h1>
+    <h1 class="text-primary">Add New Sighting</h1>
 
     {% load crispy_forms_tags %}
 
@@ -18,8 +18,8 @@ Add New Photo
         {% csrf_token %}
         {{ form|crispy}}
 
-        <button class="btn btn-success m-5" type="submit">Save Image</button>
-        <a class="btn btn-success m-5" href="/photo/{{ object.pk }}/delete">Delete Image</a>
+        <button class="btn btn-success m-5" type="submit">Save Sighting</button>
+        <a class="btn btn-success m-5" href="/photo/{{ object.pk }}/delete">Delete Sighting</a>
 
     </form>
 
