--- a/Student/10/SuperHeroes/photos/templates/photo/delete.html
+++ b/Student/10/SuperHeroes/photos/templates/photo/delete.html
@@ -1,7 +1,7 @@
 {% extends 'theme.html' %}
 
 {% block title %}
-Delete Photo
+Delete Sighting
 {% endblock title %}
 
 
@@ -9,7 +9,7 @@ Delete Photo
 
     <div class="container m-5">
 
-    <h1 class="text-primary">Delete Photo</h1>
+    <h1 class="text-primary">Delete Sighting</h1>
 
     <form action="" method="post">{% csrf_token %}
         <p>Are you sure you want to delete "{{ object.title }}"?</p>
