--- a/Student/10/SuperHeroes/photos/templates/photo/edit.html
+++ b/Student/10/SuperHeroes/photos/templates/photo/edit.html
@@ -1,7 +1,7 @@
 {% extends 'theme.html' %}
 
 {% block title %}
-Edit Photo
+Edit Sighting
 {% endblock title %}
 
 
@@ -9,7 +9,7 @@ Edit Photo
 
 <div class="container m-5">
 
-    <h1 class="text-primary">Edit Photo</h1>
+    <h1 class="text-primary">Edit Sighting</h1>
 
     {% load crispy_forms_tags %}
 
