Fix Project Header

--- a/Student/11/SuperHeroes/SuperProfiles/templates/navbar.html
+++ b/Student/11/SuperHeroes/SuperProfiles/templates/navbar.html
@@ -2,7 +2,7 @@
 
     <div class="container">
 
-        <a class="navbar-brand text-light" href="/">SIS DB - SuperHero Investigative Society</a>
+        <a class="navbar-brand text-light" href="/">SIS Database</a>
 
         <ul class="navbar-nav text-light ml-auto">
             <li class="nav-item">
