--- a/Student/11/SuperHeroes/SuperProfiles/templates/navbar.html
+++ b/Student/11/SuperHeroes/SuperProfiles/templates/navbar.html
@@ -21,12 +21,7 @@
                 <a class="nav-link  text-light " href="/reporter/home">{{ user.username }}</a>
             </li>
             <li class="nav-item">
-                <form action="{% url 'logout' %}" method="post" style="display: inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="nav-link text-light" style="background: none; border: none; padding: 0; cursor: pointer;">
-                        Log out
-                    </button>
-                </form>
+                <a class="nav-link  text-light " href="{% url 'logout' %}">Log out</a>
             </li>
 
             {% else %}
